Fixed a problem with the Insert functionality not dispatching DomainEvents in Infrastructure. 2) Got Pet Queries being written to!
